--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^6.8.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "mysqldump": "^3.1.0",
     "node-cron": "^2.0.3",
